Fix responsive design on small displays.

--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,8 @@
     align-items: center;
     justify-content: center;
 }
+
+.blockquote {
+    font-size: medium;
+    font-style: italic;
+}
